--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ align-items: center;
 .container{
     display: flex;
     flex-direction: column;
+    align-items: center;
     min-width: 500px;
 }
 
