--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 background-color: #256D85;
-
 padding: 0%;
 margin: 0%;
 }
@@ -14,29 +13,30 @@ margin: 0%;
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
+
 .container{
     background-color: #8FE3CF;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    
-    
-  
+    width: 500px;
+    height: 500px;
 }
 
 .gridRow{
     display: flex;
-
-   
+    width: 100%;
+    height: 100%;
 }
 
 .grid{
 border: black solid;
 border-width: 1px;
-min-width: 10px;
-min-height: 10px;
+width: 100%;
+height: 100%;
 
 }
 
