--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,30 @@
 body{
 display: flex;
-justify-content: space-between;
+flex-direction: column;
 align-items: center;
+justify-content: center;
 background-color: #256D85;
 padding: 0%;
 margin: 0%;
 }
 
-.top-container{
+nav{
+    background-color: #002B5B;
+    width: 100%;
+    padding:8px;
+    padding-left: 32px;
+    color: #fff;
+    display: flex;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
+    margin-bottom: 32px;
+    
+}
+
+
+
+.grid-container{
     width: 100%;
     height: 100%;
     display: flex;
@@ -24,6 +41,7 @@ margin: 0%;
     flex-direction: column;
     width: 500px;
     height: 500px;
+    margin-top: 5%;
 }
 
 .gridRow{
@@ -37,21 +55,11 @@ border: black solid;
 border-width: 1px;
 width: 100%;
 height: 100%;
+padding: 0%;
+margin: 0%;
 
 }
 
-.sidebar{
-    background-color: #264653;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    justify-self: flex-end;
-    height: 100%;
-    padding: 2%;
-    margin-left;: 8px
-}
-
-.sizebutton{
-    width: auto;
-    
+button{
+    flex-grow: 1;
 }
